# GeneSys

./: .gitignore  BadNumber_Practice_06_260212.c  CMakeLists.txt  CharacterLogic_Practice_02_260207.c  CollatzConjecture_Practice_09_260211.c  Copy_2_260119  Copy_3_260119  Copy_3_260119.c  CountDownBomb_Practice_4_260126  CountDownBomb_Practice_4_260126.c  DEVLOG.md  LogicPriority_Practice_07_260207.c  NumberOrder_Practice_03_260213.c  PTR_Practice_04_260227.c  Practice_01_20260219.c  Practice_01_260203.c  Practice_01_260204.c  Practice_01_260206.c  Practice_01_260209.c  Practice_01_260211.c  Practice_01_260212.c  Practice_01_260215.c  Practice_01_260219.c  Practice_01_260224.c  Practice_01_260225.c  Practice_01_260227.c  Practice_01_260318.c  Practice_01_260320.c  Practice_01_260324.c  Practice_02_260201.c  Practice_02_260202.c  Practice_02_260204.c  Practice_02_260206.c  Practice_02_260208.c  Practice_02_260209.c  Practice_02_260211.c  Practice_02_260222.c  Practice_02_260224.c  Practice_03_260201.c  Practice_03_260206.c  (+216 more)
260131/: Practice_12_260131.c  Practice_14_260131.c  Practice_30_260131.c  Practice_38_260131.c  Practice_42_260131.c
260201/: Practice_19_260201.c  Practice_34_260201.c  Practice_42_260201.c  Practice_43_260201.c
260206/: Practice_06_260206.c
260207/: Bouncer_Practice_01_260207.c
260213/: Practice_01_260213.c  Practice_02_260213.c
260214/: Practice_02_260214.c
DailyPractice/: .gitignore  BadNumber_Practice_06_260212.c  CMakeLists.c  CSAPP_Page683.c  CollatzConjecture_Practice_09_260211.c  Copy_2_260119.c  CyberCafeGateKeeper_Practice_05_260206.c  CyberVendingMachine_Practice_05_260208.c  DataFilter_Practice_05_260204.c  Factorial_Practice_04_260213.c  GeometryCheck_Practice_06_260207.c  HaveATry.c  HeartBeat_260210.c  KenoSys_Ready_Practice_3_260126.c  OperatorBoss_Practice_08_260207.c  PTR_Practice_04_260227.c  Palindrome_Number_01_Practice_03_260415.c  Practice_01_260201.c  Practice_01_260202.c  Practice_01_260205.c  Practice_01_260208.c  Practice_01_260213.c  Practice_01_260214.c  Practice_01_260216.c  Practice_01_260217.c  Practice_01_260218.c  Practice_01_260220.c  Practice_01_260221.c  Practice_01_260222.c  Practice_01_260223.c  Practice_01_260225.c  Practice_01_260226.c  Practice_01_260324.c  Practice_01_260331.c  Practice_01_260409.c  Practice_01_260413.c  Practice_01_260415.c  Practice_01_260416.c  Practice_01_260418.c  Practice_01_260420.c  (+203 more)
Data_Structures_Crash_Course/01_Arrays/: 1929_Concatenation_of_Array.c
KenoSys_Project/: Practice_01_260228.cpp
KenoSys_Projects/: ByronSimulator_v01_Practice_01_260302.cpp  ByronSimulator_v02_260302.cpp  ByronStimulator_v01_Practice_01_260302.cpp  ByronStimulator_v02_260302.cpp  CMakeLists.txt  CodeBook_Practice_02_260301.cpp  GhostInTheShell_260304.cpp  GhostInTheShell_v02_260304.cpp  Kenosh.c  PhoneticParser_260303.cpp  Practice_01_260228.cpp  Practice_01_260301.cpp  Practice_02_260301.cpp  SentenceMeterJudge_260303.cpp
KenoSys_Projects/data/: GhostCaller.h
LeetCode_HitTheRoad/Data_Structures_Crash_Course/01_Arrays/: 01_Set_Mismatch.c  How_Man_ Numbers_Are_Smaller_01.c  Q2_.c
LeetCode_HitTheRoad/Data_Structures_Crash_Course/01_Arrays/1470_Shuffle_the_Array/: 01_1470_Shuffle_the_Array.c  02_1470_Shuffle_the_Array.c
LeetCode_HitTheRoad/Data_Structures_Crash_Course/01_Arrays/1929_Concatenation_of_Array/: 01_1929_Concatenation_of_Array.c  02_1929_Concatenation_of_Array.c
LeetCode_HitTheRoad/Data_Structures_Crash_Course/01_Arrays/Find_All_Numbers_Disappeared/: Find_All_Numbers_Disappeared_01.c
LeetCode_HitTheRoad/Data_Structures_Crash_Course/01_Arrays/How_Man_Numbers_Are_Smaller/: How_Man_Numbers_Are_Smaller_01.c
LeetCode_HitTheRoad/Data_Structures_Crash_Course/01_Arrays/Max_Consecutive_Ones/: 01_Max_Consecutive_Ones.c
Practice_1_260120.dSYM/: Practice_3_260130  Practice_3_260130.c  Practice_3_scanf_260120  Practice_3_scanf_260120.c
Practice_1_260120.dSYM/Contents/: Info.plist  Practice_4_2602130  Practice_4_2602130.c
Practice_1_260120.dSYM/Contents/Resources/DWARF/: Practice_1_260120
Practice_4_260122.dSYM/Contents/: Info.plist
Practice_4_260122.dSYM/Contents/Resources/DWARF/: Practice_4_260122
Practice_Temperature_260120.dSYM/Contents/: Info.plist
Practice_Temperature_260120.dSYM/Contents/Resources/DWARF/: Practice_Temperature_260120
